[accessibility]: fix color contrast, heading sequnce.

--- a/assets/scss/0-tools/_vars.scss
+++ b/assets/scss/0-tools/_vars.scss
@@ -55,5 +55,5 @@ $btn-primary-border: #003773;
 $btn-hover-bg: #022b55;
 $btn-hover-border: #021e3d;
 $darker-link: #006ce0;
-$orange-heading: #f99e1b;
+$orange-heading: #C67706;
 
